# AdventOfCode2024

./: .gitignore  README.md  dagger.json  go.work  go.work.sum
.dagger/: go.mod  go.sum  main.go
.github/workflows/: build.yaml
advent/: go.mod  main.go
advent/days/d1/: day1.go
advent/days/d2/: day2.go
advent/register/: register.go
src/cpp/: .gitignore  CMakeLists.txt  Day.h  Day1.cpp  Day1.h  Day2.cpp  Day2.h  Day3.cpp  Day3.h  DayFactory.cpp  DayFactory.h  main.cpp  vcpkg.json
src/cs/: AdventOfCode2024.sln
src/cs/AdventOfCode2024/: AdventOfCode2024.csproj  Day1.cs  Day2.cs  Day3.cs  Day5.cs  IDay.cs  Program.cs
src/go/: go.mod  main.go
src/go/days/: day1.go  day2.go  day3.go  day4.go  days.go
src/py/: .gitignore  main.py
src/py/days/: day.py  day1.py  day6.py
src/rs/: Cargo.toml
src/rs/src/: day.rs  day7.rs  day8.rs  main.rs
